# neuro-desktop

./: .gitignore  README.md
desktop/: Makefile  README.md
desktop/apps/neuro-desktop/: Cargo.toml
desktop/apps/neuro-desktop/src/: build.rs  controller.rs  go_manager.rs  integration.rs  ipc_handler.rs  main.rs  os_agent.rs
desktop/apps/neuro-integration/: action-handling.go  go.mod  go.sum  main.go  specifics.go  types.go
desktop/apps/neuro-integration/integration-docs/: Action Script Documentation.md
desktop/apps/process-handler/: CMakeLists.txt
desktop/apps/process-handler/src/: main.cpp
desktop/apps/process-handler/tests/: test_integration.cpp  test_message.cpp  test_validator.cpp
desktop/backend/python/: requirements.txt
desktop/backend/python/controller/: actions.py  desktop.py  lib.py  pinfo.yml  vision.py
desktop/backend/python/controller/abstractions/: windows_utility.py
desktop/backend/python/controller/controls/: keyboard.py  mouse.py
desktop/backend/python/controller/libraries/: mouse_pathfinder.py
desktop/backend/python/controller/libraries/infoutils/: windowinfo.py
desktop/backend/python/monitor/: README.md
desktop/backend/python/os-driver/: __main__.py  actions.py
desktop/config/: README.md  integration-config.yml
desktop/libs/neuro-integration-sdk/: README.md  neuro.go
desktop/native/c_cpp/: CMakeLists.txt
desktop/native/custom-communications-processor/: CMakeLists.txt
desktop/native/go/: go.mod  main.go
desktop/native/go-neuro-integration/: main.go
desktop/native/go/neuro-integration-sdk/: neuro.go
desktop/native/neuro-integration/: action-handling.go  action-registry.go  config.go  main.go  neuro-api-funcs.go  specifics.go  utils.go
desktop/native/process-handler/: CMakeLists.txt  README.md
desktop/native/process-handler/src/: process_handler.cpp  process_handler.h
desktop/native/process-handler/tests/: test_channels.cpp  test_process_manager.cpp
desktop/native/rust-core/: Cargo.toml
desktop/native/rust-core/src/: configs.rs  lib.rs  paths.rs
desktop/scripts/: build-all.ps1  build-go.ps1  bundle.ps1  dev-python.ps1  setup-dev.ps1
desktop/scripts/bundle/: README.md  dev.ps1  prod.ps1
tests/: README.md
tests/integration/: test-go-integration.js  test-process-handler.js
