[package]
name = "neuro-desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
rust-core = { path = "../../native/rust-core" }

# This is for the python packages
pyo3 = { version = "0.21.0", features = ["auto-initialize"] }
anyhow = "1"

# This is also used by the neuro integration
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1"

# Neruosama Integration Dependencies
futures-util = "0.3.31"
neuro-sama = "0.4.5"
schemars = "0.8.21"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "rt", "macros", "sync", "time"] }
tokio-tungstenite = "0.21" # this matches tungstenite 0.28