[package]
name = "neuro-desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
rust-core = { path = "../../native/rust-core" }
pyo3 = { version = "0.21.0", features = ["auto-initialize"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "signal"] }

# Optional: for Neuro API integration (if you want to do it in Rust instead)
# tungstenite = "0.20"
# neuro-sama = "0.4.5"
# url = "2.4"
# futures-util = "0.3"